crates/ridge-parser/tests/fixtures/errors/p012_tuple_param.ridge
-- expect: P012
-- Trigger: top-level fn parameter is a tuple pattern (D037 violation).
fn f (x, y) = x
